--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="My personal website created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +30,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Ezequiel Jerez</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
